# k2g

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  TODO.md  __init__.py  claude.md  info_action.py  kicad_v9.py  pipes.txt  plugin.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
Mockup/: README.md  index.html
Mockup/src/app/: routes.ts
assets/catalogs/: PCB_Cutting_Conditions.xlsx  generic.yaml  kyocera.yaml  unionfab.yaml
assets/cnc_templates/: batam.yaml  genmitsu_3018.yaml  masso_g3_no_atc.yaml  masso_g3_with_atc.yaml
assets/help/: gtl.md
crates/datastore/: Cargo.toml
crates/datastore/src/: error.rs  lib.rs  model.rs  parse.rs  persist.rs  resolve.rs  schema.rs  units_bridge.rs
crates/datastore/tests/: directory.rs  factory.rs  instantiate_from.rs  parse.rs  persist.rs  replace_document.rs  resolve.rs  schema_build.rs  set_value_str.rs
crates/datastore/tests/common/: mod.rs
crates/datastore/tests/fixtures/: gadget.yaml  id.yaml  toolset.yaml  units.yaml  widget.yaml
crates/gtl/: Cargo.toml
crates/gtl/src/: error.rs  lib.rs  transpile.rs
crates/pcb/: Cargo.toml
crates/pcb/src/: error.rs  kicad.rs  lib.rs  snapshot.rs
crates/pcb/src/stitching/: mod.rs  tessellate.rs
crates/units/: Cargo.toml
crates/units/src/: display.rs  lib.rs  machine.rs  persistence.rs  types.rs  user_format.rs
docs/: Specification.md  Specification_reqs.md  UI_Generator_Brief.md  architecture.md  data-api.md  module-dependencies.d2  outstanding.md  package-architecture-high-level.d2  package-dependencies.d2  unit-display.md
gcoder_rust/: Cargo.toml
gcoder_rust/gcode-rhai-lab/src/: lib.rs  main.rs  units.rs
gcoder_rust/src/: main.rs
gcoder_rust/src/port/: gcode_profile.rs  model.rs
gcoder_rust/src/ui/: app.css  gcode.rs  model.rs  (+1 more)
resources/catalogs/: generic.yaml  kyocera.yaml  spec.txt  unionfab.yaml
resources/cnc profiles/: genmitsu_3018.yaml  masso_g3_no_atc.yaml  masso_g3_with_atc.yaml
resources/cnc_templates/: batam.yaml  genmitsu_3018.yaml  masso_g3_no_atc.yaml  masso_g3_with_atc.yaml
resources/schemas/: catalog.schema.yaml  catalog.yaml  catalog_schema.yaml  cnc.yaml  cnc_profile.schema.yaml  fixture.yaml  fixture_profile.schema.yaml  global_settings.schema.yaml  id.yaml  job_profile.schema.yaml  machine.yaml  machining.yaml  process_profile.schema.yaml  processing.yaml  rack.schema.yaml  readme.md  settings.yaml  stock.schema.yaml  stock.yaml  toolset.yaml  toolset_profile.schema.yaml  units.yaml
rust/: PORTING_PLAN.md
rust/config/: masso_g3.yaml
rust/gcode-rhai-lab/: Cargo.toml
rust/src/: main.rs
rust/ui/: figma.js
schemas/: catalog.yaml  cnc.yaml  fixture.yaml  id.yaml  job.yaml  machining.yaml  stock.yaml  toolset.yaml
schemas/docs/: data-api.md  gcode-engine.md  gcode-generation.md  gcode-template-language.md  operation-planner.md
src/: app_state.rs  app_state_impl.rs  board.rs  catalog_io.rs  cli.rs  config.rs  ctx.rs  data.rs  expression_parser.rs  id.rs  kicad_wrapper.rs  main.rs  paths.rs  units.rs  user_path.rs
src/catalog/: init.rs  manager.rs  mod.rs  types.rs
src/catalog_io/: bootstrap.rs  catalog_normalizer.rs  error.rs  validator.rs
src/config/: bootstrap.rs  catalog_normalizer.rs  defaults.rs  error.rs  manager.rs  persistence.rs  validator.rs  yaml_service.rs
src/ctx/: app_state_impl.rs  catalogs_impl.rs  ctx_app_state_impl.rs  mod.rs  runtime_impl.rs
src/data/: mod.rs
src/domain/: app_shell.rs  catalog.rs  job.rs  mod.rs  profiles.rs  stock.rs  tool_core.rs
src/gcode/: assigner.rs  coder.rs  mod.rs  placement.rs  plan.rs  planner.rs  primitive_vars.rs  template.rs
src/rhai-parser/: README.md
src/runtime/: catalogs.rs  generation.rs  log_capture.rs  machining_plan.rs  mod.rs  orchestration.rs  state.rs  tooling.rs
src/stitching/: mod.rs
src/ui/: app.rs  bindings.rs  data_bind.rs  help.rs  mod.rs  model.rs  navigation.rs  theme.rs  unit_format.rs  unit_service.rs
templates/: masso.yaml
xtask/: Cargo.toml
xtask/src/: main.rs  schema_doc.rs
(+76 files in other folders)
