[package]
name = "k2g"
version = "0.1.0"
edition = "2021"
description = "GCode generator"

[dependencies]
kicad-ipc-rs = { version = "0.4.3", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
dioxus = { version = "0.7", features = ["desktop"] }
clap = { version = "4", features = ["derive"] }
rhai = "1"
thiserror = "2"
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.28"
log = "0.4"
image = "0.24"
rfd = "0.15"
clipper2-rust = "1.0"
