[package]
name = "k2g"
version = "0.1.0"
edition = "2021"
description = "GCode generator"

[workspace]
members = [
    ".",
    "crates/datastore",
    "crates/pcb",
    "crates/units",
    "xtask",
]

[dependencies]
units = { path = "crates/units" }
pcb = { path = "crates/pcb" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
dioxus = { version = "0.7", features = ["desktop"] }
clap = { version = "4", features = ["derive"] }
rhai = "1"
thiserror = "2"
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.28"
log = "0.4"
image = "0.24"
base64 = "0.22"
rfd = "0.15"
uuid = { version = "1", features = ["v5", "v7"] }
dioxus-logger = "0.7.9"
tracing = "0.1.44"
tracing-subscriber = { version="0.3.23", features = ["env-filter"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
