[package]
name = "datastore"
version = "0.1.0"
edition = "2021"
description = "Generic schema-driven data store: validate, default, type units/ids, and resolve references from JSON Schema."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
jsonschema = "0.28"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
units = { path = "../units" }

[dev-dependencies]
tempfile = "3"
